generate front-end UI with JavaFX